[package]
name = "spare-parts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", default-features = false, features = ["http1", "json", "query", "matched-path", "tracing", "macros"] }
csv = "1.3.0"
encoding = "0.2.33"
futures-lite = "2.2.0"
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
smol = "2.0.0"
smol-axum = "0.1.0"
smol-macros = "0.1.0"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
